--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
+          <a class="nav-link" href="#mapa">Ubicacion <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" href="#contacto">Contacto <span class="sr-only">(current)</span></a>
         </li>
       </ul>
@@ -158,7 +161,7 @@
     <div>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.5045799748323!2d-57.976834482556185!3d-34.9188803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e7b36053d2ff%3A0x4ad2b199089d6803!2sFerreteria%2039*21!5e0!3m2!1ses!2sar!4v1604102667594!5m2!1ses!2sar "
-        width="70% " height="300" frameborder="0 " style="border:0; " allowfullscreen=" " aria-hidden="false "
+        width="100% " height="350 " frameborder="0 " style="border:0; " allowfullscreen=" " aria-hidden="false "
         tabindex="0 ">
       </iframe>
     </div>
@@ -208,7 +211,7 @@
 
       <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSemk5CoByUYea77U094J1ZWV6Bo3XZWUi4Yo4fqsaEeb3p9rQ/viewform?embedded=true"
-        width="70%" height="800" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        width="100%" height="910" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 my-2">
