--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@
     </div>
   </div>
 
-
-
   <!-- Quienes somos -->
   <section class="m1 text-center bg-light" style="padding-top: 25px;">
     <div class="container">
@@ -100,16 +98,15 @@
         <div class="m-1 mx-auto">
           <h3>Quienes somos?</h3>
           <p>
-            Con 25 años de experiencia en el rubro, venimos a ofrecerte una nueva opcion en La Loma.
+            Una empresa familiar con 25 años de experiencia en el rubro, venimos a ofrecer una nueva opcion en La Loma.
           </p>
-          <h3>Rubros:</h3>
         </div>
       </div>
     </div>
     <div class="container-cards bg-light">
       <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="img/Cerrajeria2.jpg " alt="Cerrajeria" />
+          <img class="card-img-top" src="img/card-cerrajeria.jpg " alt="Cerrajeria" />
           <div class="card-body">
             <h5 class="card-title">Cerrajeria</h5>
             <p class="card-text">
@@ -119,7 +116,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="img/Electricidad2.jpg " alt="Electricidad " />
+          <img class="card-img-top" src="img/card-electricidad.jpg " alt="Electricidad " />
           <div class="card-body">
             <h5 class="card-title">Materiales electricos</h5>
             <p class="card-text">
@@ -129,7 +126,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="img/Buloneria2.jpg " alt="Buloneria " />
+          <img class="card-img-top" src="img/card-buloneria.jpg " alt="Buloneria " />
           <div class="card-body">
             <h5 class="card-title">Buloneria</h5>
             <p class="card-text">
@@ -142,7 +139,7 @@
 
       <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="img/Pinturas2.jpg " alt="Pinturas " style="width: 100%; height: 60%" />
+          <img class="card-img-top" src="img/card-pintura.jpg " alt="Pinturas " style="width: 100%; height: 60%" />
           <div class="card-body">
             <h5 class="card-title">Pintureria</h5>
             <p class="card-text">
@@ -151,7 +148,8 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="img/Insecticida.jpg " alt="Herramientas " style="width: 100%; height: 60%" />
+          <img class="card-img-top" src="img/card-insecticida.jpg " alt="Herramientas "
+            style="width: 100%; height: 60%" />
           <div class="card-body">
             <h5 class="card-title">Insecticidas</h5>
             <p class="card-text">
@@ -160,7 +158,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="img/Sanitarios2.jpg " alt="Sanitarios " style="width: 100%; height: 60%" />
+          <img class="card-img-top" src="img/card-sanitarios.jpg " alt="Sanitarios " style="width: 100%; height: 60%" />
           <div class="card-body">
             <h5 class="card-title">Sanitarios</h5>
             <p class="card-text">
@@ -191,6 +189,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4 my-1">
             <div class="card border rounded">
               <div class="card-body text-center">
+                <img src="img/facebook-logo.png" alt="Seguinos en Facebook!" width="50" height="50">
                 <a href="https://www.facebook.com/Ferreteria39LP">
                   <button type="button" class="btn btn-primary btn-lg">
                     Facebook
@@ -202,6 +201,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4 my-2">
             <div class="card border rounded">
               <div class="card-body text-center">
+                <img src="img/instagram-logo.png" alt="Seguinos en Instagram!" width="50" height="50">
                 <a href="https://www.instagram.com/ferreteria_39/">
                   <button type="button" class="btn btn-info btn-lg">
                     Instagram
@@ -213,6 +213,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4 my-2">
             <div class="card border rounded">
               <div class="card-body text-center">
+                <img src="img/whatsapp-logo.png" alt="Contactanos via Whatsapp!" width="50" height="50">
                 <a
                   href="https://api.whatsapp.com/send?phone=542216909840&fbclid=IwAR16je2yx9fRj-bNmTw5Ein13Y-aL8HN9uyakMTBPLPdFtaa-Noo4iDpUAs">
                   <button type="button" class="btn btn-success btn-lg">
@@ -232,6 +233,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4 my-2">
             <div class="card border rounded">
               <div class="card-body text-center">
+                <img src="img/logo-telefono.png" alt="Telefono de contacto" width="50" height="50">
                 <i class="fa fa-phone fa-5x mb-3" aria-hidden="true"></i>
                 <h4 class="text-uppercase mb-3">Telefono:</h4>
                 <p>0221-15-6909840</p>
@@ -242,6 +244,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4 my-2">
             <div class="card border rounded">
               <div class="card-body text-center">
+                <img src="img/logo-ubicacion.png" alt="Donde nos encontramos?" width="50" height="50">
                 <i class="fa fa-map-marker fa-5x mb-3" aria-hidden="true"></i>
                 <h4 class="text-uppercase mb-3">Direccion:</h4>
                 <address>39 N°1261 e/20 y 21</address>
@@ -252,9 +255,21 @@
           <div class="col-sm-12 col-md-6 col-lg-4 my-2">
             <div class="card border rounded">
               <div class="card-body text-center">
+                <img src="img/logo-horario.png" alt="Horario de atencion:" width="50" height="50">
                 <i class="fa fa-map-marker fa-5x mb-3" aria-hidden="true"></i>
                 <h4 class="text-uppercase mb-3">Horario:</h4>
                 <p>Lunes a domingo de 9 a 19!</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-12 col-md-12 col-lg-12 my-2">
+            <div class="card border rounded">
+              <div class="card-body text-center">
+                <img src="img/logo-email.png" alt="Correo electronico:" width="50" height="50">
+                <i class="fa fa-map-marker fa-5x mb-3" aria-hidden="true"></i>
+                <h4 class="text-uppercase mb-3">Correo electronico:</h4>
+                <p>ferreteriacuevas@yahoo.com.ar</p>
               </div>
             </div>
           </div>
